@@ -63,7 +63,7 @@ public record ReadAndUpdateCollectionOperation(
   @Override
   public Uni<Supplier<CommandResult>> execute(
       RequestContext dataApiRequestInfo, QueryExecutor queryExecutor) {
-    final AtomicReference pageStateReference = new AtomicReference();
+    final AtomicReference<String> pageStateReference = new AtomicReference<>();
     final AtomicInteger matchedCount = new AtomicInteger(0);
     final AtomicInteger modifiedCount = new AtomicInteger(0);
     Uni<CollectionReadOperation.FindResponse> docsToUpdate =
@@ -76,16 +76,14 @@ public record ReadAndUpdateCollectionOperation(
             findResponse -> {
               pageStateReference.set(findResponse.pageState());
               final List<ReadDocument> docs = findResponse.docs();
-              if (upsert() && docs.size() == 0 && matchedCount.get() == 0) {
+              if (upsert() && docs.isEmpty() && matchedCount.get() == 0) {
                 // TODO: creating the new document here, with the defaults from the filter, makes it
-                // harder because
-                // the new document created here may nto have an _id if there was none in the
-                // filter. A better approach
-                // may be to have the documentUpdater create the upsert document totally in once
-                // place. Currently creating the
-                // upsert document is in multiple places. To do this we would create
-                // UpdateOperations from the filter and
-                // give them to the document updated when it is created.
+                // harder because the new document created here may nto have an _id if there was
+                // none in the filter. A better approach may be to have the documentUpdater create
+                // the upsert document totally in once place.
+                // Currently creating to upsert document is in multiple places. To do this we would
+                // create UpdateOperations from the filter and give them to the document updated
+                // when it is created.
                 return Multi.createFrom().item(findCollectionOperation().getNewDocument());
               } else {
                 matchedCount.addAndGet(docs.size());
@@ -145,17 +143,22 @@ public record ReadAndUpdateCollectionOperation(
               // create json doc read/write metrics
               commandContext
                   .jsonProcessingMetricsReporter()
-                  .reportJsonReadDocsMetrics(commandContext().commandName(), matchedCount.get());
+                  .reportJsonReadDocsMetrics(
+                      commandContext().requestContext().tenant(),
+                      commandContext().commandName(),
+                      matchedCount.get());
               commandContext
                   .jsonProcessingMetricsReporter()
                   .reportJsonWrittenDocsMetrics(
-                      commandContext().commandName(), modifiedCount.get());
+                      commandContext().requestContext().tenant(),
+                      commandContext().commandName(),
+                      modifiedCount.get());
               return new UpdateCollectionOperationPage(
                   matchedCount.get(),
                   modifiedCount.get(),
                   updates,
                   returnDocumentInResponse(),
-                  (String) pageStateReference.get());
+                  pageStateReference.get());
             });
   }
 
@@ -212,7 +215,8 @@ public record ReadAndUpdateCollectionOperation(
                                     vectorizedDocumentUpdaterResponse.document(),
                                     readDocument
                                         .txnId()
-                                        .orElse(null)); // will be empty when this is a upsert'd doc
+                                        .orElse(
+                                            null)); // will be empty when this is an upserted doc
 
                         // Have to do this because shredder adds _id field to the document if it
                         // doesn't exist
@@ -290,7 +294,7 @@ public record ReadAndUpdateCollectionOperation(
 
   // NOTE: This method is used in the test code (to avoid having to copy query Strings verbatim),
   // so it should not be changed to private or non-static
-  protected static String buildUpdateQuery(
+  static String buildUpdateQuery(
       String keyspaceName, String collectionName, boolean vectorEnabled, boolean lexicalEnabled) {
     StringBuilder updateQuery = new StringBuilder(200);
     updateQuery
@@ -301,16 +305,16 @@ public record ReadAndUpdateCollectionOperation(
         .append("\" SET ")
         .append(
             """
-tx_id = now(),
-exist_keys = ?,
-array_size = ?,
-array_contains = ?,
-query_bool_values = ?,
-query_dbl_values = ?,
-query_text_values = ?,
-query_null_values = ?,
-query_timestamp_values = ?,
-""");
+                tx_id = now(),
+                exist_keys = ?,
+                array_size = ?,
+                array_contains = ?,
+                query_bool_values = ?,
+                query_dbl_values = ?,
+                query_text_values = ?,
+                query_null_values = ?,
+                query_timestamp_values = ?,
+                """);
     if (vectorEnabled) {
       updateQuery.append("\nquery_vector_value = ?,");
     }
@@ -319,10 +323,10 @@ query_timestamp_values = ?,
     }
     updateQuery.append(
         """
-doc_json  = ?
-WHERE key = ?
-IF tx_id = ?
-""");
+            doc_json  = ?
+            WHERE key = ?
+            IF tx_id = ?
+            """);
 
     return updateQuery.toString();
   }
@@ -356,13 +360,7 @@ IF tx_id = ?
     return SimpleStatement.newInstance(builtQuery, positional.toArray(new Object[0]));
   }
 
-  /**
-   * Utility method to read the document again, in case of lwt error
-   *
-   * @param queryExecutor
-   * @param prevReadDoc
-   * @return
-   */
+  /** Utility method to read the document again, in case of lwt error */
   private Uni<ReadDocument> readDocumentAgain(
       RequestContext dataApiRequestInfo, QueryExecutor queryExecutor, ReadDocument prevReadDoc) {
     return findCollectionOperation()
@@ -375,11 +373,10 @@ IF tx_id = ?
         .transform(
             response -> {
               if (!response.docs().isEmpty()) {
-                return response.docs().get(0);
-              } else {
-                // If data changed and doesn't satisfy filter conditions
-                return null;
+                return response.docs().getFirst();
               }
+              // If data changed and doesn't satisfy filter conditions
+              return null;
             });
   }
 
