@@ -7,12 +7,12 @@ import io.stargate.embedding.gateway.EmbeddingGateway;
 import io.stargate.embedding.gateway.RerankingService;
 import io.stargate.sgv2.jsonapi.api.request.RerankingCredentials;
 import io.stargate.sgv2.jsonapi.api.request.tenant.Tenant;
+import io.stargate.sgv2.jsonapi.exception.RerankingProviderException;
 import io.stargate.sgv2.jsonapi.exception.SchemaException;
 import io.stargate.sgv2.jsonapi.service.provider.ModelProvider;
 import io.stargate.sgv2.jsonapi.service.reranking.configuration.RerankingProvidersConfig;
 import io.stargate.sgv2.jsonapi.service.reranking.operation.RerankingProvider;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /** Grpc client to make reranking Grpc requests to reranking API inside EmbeddingGatewayService */
 public class RerankingEGWClient extends RerankingProvider {
@@ -85,8 +85,14 @@ public class RerankingEGWClient extends RerankingProvider {
       gatewayRerankingUni = grpcGatewayService.rerank(gatewayRequest);
     } catch (StatusRuntimeException e) {
       if (e.getStatus().getCode().equals(Status.Code.DEADLINE_EXCEEDED)) {
-        throw SchemaException.Code.RERANKING_PROVIDER_TIMEOUT.get(
-            Map.of("errorMessage", e.getMessage()));
+        throw RerankingProviderException.Code.RERANKING_PROVIDER_TIMEOUT.get(
+            Map.of(
+                "modelProvider",
+                modelProvider().apiName(),
+                "httpStatus",
+                String.valueOf(e.getStatus().getCode()),
+                "errorMessage",
+                e.getMessage()));
       }
       throw e;
     }
@@ -99,14 +105,14 @@ public class RerankingEGWClient extends RerankingProvider {
                 // 22-Jan-2026, tatu: This is ugly. But has to be done to work around fragility
                 //   of exception mapping
                 throw SchemaException.Code.valueOf(gatewayResponse.getError().getErrorCode())
-                    .withPreformattedMessage(gatewayResponse.getError().getErrorMessage());
+                    .withPreformattedMessage(gatewayResponse.getError().getErrorBody());
               }
 
               return new BatchedRerankingResponse(
                   batchId,
                   gatewayResponse.getRanksList().stream()
                       .map(rank -> new Rank(rank.getIndex(), rank.getScore()))
-                      .collect(Collectors.toList()),
+                      .toList(),
                   createModelUsage(gatewayResponse.getModelUsage()));
             });
   }
